k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lite-ad-server-service
  namespace: lite-ad-server
spec:
  selector:
    app: lite-ad-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
